--- a/index.html
+++ b/index.html
@@ -1,2 +1,23 @@
-hihi
-<iframe src="https://i.simmer.io/@clad2812/rapid-running-beta-1-1" style="width:1024px;height:768px;border:0"></iframe>
+<!DOCTYPE html>
+<html>
+    <head>
+
+    </head>
+    <body style="background-color:darkslategrey;">
+        <div style="text-align: center;">
+            <p style="color: aliceblue; font-size: 60px; font-weight: bold;">ĐỒ ÁN GAME NHÓM GONZ</p>
+            <p style="color: aliceblue; font-size: 22px; font-weight: bold;">Khoa CNTT - Đại học Sư phạm TP.HCM</p>
+            <p style="color: aliceblue; font-size: 22px; font-weight: bold;">(Tháng 6/2021)</p>
+            <iframe src="https://i.simmer.io/@clad2812/rapid-running-beta" style="width:1024px;height:768px;border:0"></iframe>
+        </div>
+        <div style="text-align: center;">
+            <br>
+            <p style="color: aliceblue; font-size: 22px; font-weight: bold;">Thành viên nhóm:</p>
+            <p style="color: aliceblue; font-size: 22px; font-weight: bold;">Cổ Lê Anh Duy - 44.01.104.006 (Code chính)</p>
+            <p style="color: aliceblue; font-size: 22px; font-weight: bold;">Nguyễn Thành Duy - 44.01.104.070 (Giao diện)</p>
+            <p style="color: aliceblue; font-size: 22px; font-weight: bold;">Nguyễn Thị Uyển Cương - 44.01.104.058 (Tester)</p>
+            <p style="color: aliceblue; font-size: 22px; font-weight: bold;">Nguyễn Dương Hồng Diệu - 44.01.104.004 (Tester)</p>
+        </div>
+    </body>
+
+</html>
