--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body style="background-color:darkslategrey;">
         <div style="text-align: center;">
-            <p style="color: aliceblue; font-size: 60px; font-weight: bold;">ĐỒ ÁN GAME NHÓM GONZ</p>
+            <p style="color: aliceblue; font-size: 60px; font-weight: bold;">ĐỒ ÁN GAME - NHÓM GONZ</p>
             <p style="color: aliceblue; font-size: 22px; font-weight: bold;">Khoa CNTT - Đại học Sư phạm TP.HCM</p>
             <p style="color: aliceblue; font-size: 22px; font-weight: bold;">(Tháng 6/2021)</p>
             <iframe src="https://i.simmer.io/@clad2812/rapid-running-beta" style="width:1024px;height:768px;border:0"></iframe>
